Wired up Meteor.call homepage message.

--- a/client/main.html
+++ b/client/main.html
@@ -4,4 +4,8 @@
 
 <body>
   <h1>meteor-forum-26966-meteor-error</h1>
+  <p>
+    Run the following in your browser console:
+    <strong>Meteor.call('createInvitationDetails');</strong>
+  </p>
 </body>
